Attempt to fix ios address bar jump

--- a/VerdantStyle.css
+++ b/VerdantStyle.css
@@ -157,7 +157,7 @@ body {
     top: 0;
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 0;
 }
 
